--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.1",
     "@types/express-session": "^1.15.12",
+    "@types/express-ws": "^3.0.0",
     "@types/morgan": "^1.7.35",
     "@types/node": "^10.14.6",
     "@types/passport-local": "^1.0.33",
@@ -39,6 +40,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
+    "express-ws": "^4.0.0",
     "http": "0.0.0",
     "inversify": "^5.0.1",
     "morgan": "^1.9.1",
